V5.5.6
* Fixed bug: Bounties was not enabled on server start
* Fixed bug: mob.*.message: '' is not deleted anymore 
V5.5.5
* There is a chance that a fish head is dropped in the water, when a fish is caught
* Convert Messages is improved (only when you run V5.5.5 first time)  
V5.5.4
* Improved config.yml version detection. This should fix the reseting messages problem.
* Improved backup of config.yml (https://github.com/Rocologo/MobHunting/issues/365)
V5.5.3
* Added permission to run commands (https://www.spigotmc.org/threads/mobhunting.46937/page-160#post-2913762)
* Fishing rewards works again
* Run Messages: and Permission: nodes can be delteted from config.yml if they are empty 
V5.5.2
* Bug fixing 
V5.5.1
* Fixed NPE error, when there is no commands to run. (https://www.spigotmc.org/threads/mobhunting.46937/page-158#post-2913466)
V5.5.0
* The configuration file config.yml has been completely redesigned and extra features has been added. Individual mobs can be enabled/disabled. Each command has its own chance to run and its own message. Also DropHead is a new feature, which can be enabled/disabled and has its own chance and message. All settings will be autoconverted to the new format, but you should check the settings after first run.
* Fixed Grinding for Slimes and Magma Cubes.
* Tiny Slimes is not counted when making killstreaks.
* Fixed color codes in console debug information
* Added LorinthsRpgMobs to MetricsManager
* Config.yml is backed up to "plugins/MobHunting/backup", before writing updates.
* Disabled sending statistics to mcstat.org (https://github.com/Rocologo/MobHunting/issues/351)
* Fixed minor bugs (https://github.com/Rocologo/MobHunting/issues/356)
* Updated the language files with new color codes.
* BagOfGold events has been set to Higest priority. 
V5.4.6
* Added support for FactionsUUID (https://www.spigotmc.org/resources/factionsuuid.1035/)
* Improved /mh update so it handles SNAPSHOT's too.